refactor(util): Parser 분할 리스트 생성 로직 단순화